--- a/01_Monday/session1afternoon_solution.ipynb
+++ b/01_Monday/session1afternoon_solution.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "c47a09d1-ab4b-470a-be8d-7f480f53a2f7",
    "metadata": {},
    "outputs": [],
@@ -31,9 +31,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns \n",
+    "import seaborn as sns\n",
     "\n",
-    "from itertools import combinations \n",
+    "from itertools import combinations\n",
     "from sklearn.model_selection import train_test_split, KFold\n",
     "from sklearn.utils import resample\n",
     "\n"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "c63e25ba-753d-4731-a6e7-2c0f10bfb78f",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "0495aed3-cc18-46eb-ade4-526ac658c176",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,10 @@
     "numerical_vars = df.select_dtypes(include=['number']).columns.tolist()  # Identify numerical variables\n",
     "\n",
     "print(\"\\nCategorical variables:\", categorical_vars)\n",
-    "print(\"Numerical variables:\", numerical_vars)"
+    "print(\"Numerical variables:\", numerical_vars)\n",
+    "\n",
+    "# TODO:\n",
+    "# Outcome should be categorized as categorical_vars!"
    ]
   },
   {
@@ -284,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "09470c4f-15eb-40e0-8fed-012ccfdb6a9e",
    "metadata": {},
    "outputs": [
@@ -392,7 +395,7 @@
     "        col_to_check = f\"log_{col}\"  # Use log-transformed data for skewed variables\n",
     "    else:\n",
     "        col_to_check = col  # Use original data for non-skewed variables\n",
-    "    \n",
+    "\n",
     "    # Tukey's Fence method\n",
     "    Q1 = df[col_to_check].quantile(0.25)\n",
     "    Q3 = df[col_to_check].quantile(0.75)\n",
@@ -400,7 +403,7 @@
     "    lower_bound = Q1 - 1.5 * IQR\n",
     "    upper_bound = Q3 + 1.5 * IQR\n",
     "    outlier_Tukey.append((df[col_to_check] < lower_bound) | (df[col_to_check] > upper_bound))\n",
-    "    \n",
+    "\n",
     "    # Z-score method\n",
     "    mean = df[col_to_check].mean()\n",
     "    std_dev = df[col_to_check].std()\n",
@@ -428,6 +431,17 @@
     "# Generate scatterplot matrix using Seaborn with outlier categories as colors\n",
     "sns.pairplot(plot_data, hue=\"Outlier_Label\", palette=palette, diag_kind=\"kde\", corner=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4fdce33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # TODO:\n",
+    "# Important: When finding outliers, do not directly remove from the data frame. Just label them as outliers. And you can filter them out if your method/model need a clean data."
    ]
   },
   {
@@ -491,6 +505,17 @@
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt='.2f', linewidths=0.5)\n",
     "plt.title(\"Correlation Matrix of Selected Variables\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be282d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # TODO:\n",
+    "# Maybe do not remove the \"Outcome\" feature from the correlation matrix to see its relationships with other features. And if you can also create another feature to capture the correlation matrix result / the relationships of features, and put it in linear / regression model."
    ]
   },
   {
@@ -699,7 +724,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aa_monday",
    "language": "python",
    "name": "python3"
   },
