--- a/02_Tuesday/session2afternoon.ipynb
+++ b/02_Tuesday/session2afternoon.ipynb
@@ -9,6 +9,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d42d649e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%pip install mlxtend --quiet\n",
+    "\n",
+    "from itertools import combinations\n",
+    "from sklearn.model_selection import train_test_split, KFold\n",
+    "from sklearn.utils import resample\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5c07f9b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pregnancies', 'Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI', 'DiabetesPedigreeFunction', 'Age', 'Outcome']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../data/diabetes_cleaned.csv')\n",
+    "print(df.columns.tolist())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d2f3dca4-0e1f-4e83-a273-00331c96dce8",
    "metadata": {},
@@ -16,6 +61,18 @@
     "Prepare the dataset by applying an appropriate normalization method to the variables. <br>\n",
     "Should you normalize the outcome variable? <br>\n",
     "Should you use the same method for all variables or decide for each variable individually?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae16128d",
+   "metadata": {},
+   "source": [
+    "##### Answer:\n",
+    "No, the outcome variable should not be normalized. The outcome variable is  a categorical variable (e.g., 0 or 1 for binary classification) and normalization is not applicable to categorical data. Normalization is used for continuous variables to bring them to a common scale.\n",
+    "\n",
+    "\n",
+    "It is generally a good practice to use the same normalization method for all continuous variables to maintain consistency. However, if certain variables have very different distributions, it might be make sense to consider different normalization methods for those specific variables."
    ]
   },
   {
@@ -113,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aa_monday",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
